2019-1/231/users/4208/executions/1689_1879.log
== TEST (2019-05-01 19:53:13) 
-- CODE:
extra=float(input("horas extras"))
faltou=float(input("horas faltadas"))
h=(extra)-0.25*faltou
if(h>0 and h<=400):
	print(extra,"extra","e",faltou "de falta")
	print("R$100")
else:
	print(extra,"extra","e",faltou "de falta")
	print("R$500")
	
-- ERROR:
File "XXXX", line 5
    print(extra,"extra","e",faltou "de falta")
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:58:48) 
-- CODE:
extra=float(input("horas extras"))
faltou=float(input("horas faltadas"))
H=(extra)-0.25*faltou
print(extra,"extra","e",faltou "de falta")

if(H<=400):
	G=100
	print("R$",G)
elif(H>400)
	G=500
	print("R$",G)	
-- ERROR:
File "XXXX", line 4
    print(extra,"extra","e",faltou "de falta")
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:59:21) 
-- CODE:
extra=float(input("horas extras"))
faltou=float(input("horas faltadas"))
H=(extra)-0.25*faltou
print(extra, "extra","e",faltou, "de falta")

if(H<=400):
	G=100
	print("R$",G)
elif(H>400)
	G=500
	print("R$",G)	
-- ERROR:
File "XXXX", line 9
    elif(H>400)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:59:32) 
-- CODE:
extra=float(input("horas extras"))
faltou=float(input("horas faltadas"))
H=(extra)-0.25*faltou
print(extra, "extra","e",faltou, "de falta")

if(H<=400):
	G=100
	print("R$",G)
elif(H>400):
	G=500
	print("R$",G)	
-- OUTPUT:
420.0 extra e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:00:12) 
-- CODE:
extra=float(input("horas extras"))
faltou=float(input("horas faltadas"))
H=(extra)-0.25*faltou
print(extra, "extras","e",faltou, "de falta")

if(H<=400):
	G=100
	print("R$",G)
elif(H>400):
	G=500
	print("R$",G)	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:00:19) 
-- CODE:
extra=float(input("horas extras"))
faltou=float(input("horas faltadas"))
H=(extra)-0.25*faltou
print(extra, "extras","e",faltou, "de falta")

if(H<=400):
	G=100
	print("R$",G)
elif(H>400):
	G=500
	print("R$",G)	
-- EXECUTION TIME:
0.184729
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:00:22) 
-- CODE:
extra=float(input("horas extras"))
faltou=float(input("horas faltadas"))
H=(extra)-0.25*faltou
print(extra, "extras","e",faltou, "de falta")

if(H<=400):
	G=100
	print("R$",G)
elif(H>400):
	G=500
	print("R$",G)	
-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:00:49) 
-- CODE:
extra=float(input("horas extras"))
faltou=float(input("horas faltadas"))
H=(extra)-0.25*faltou
print(extra, "extras","e",faltou, "de falta")

if(H<=400):
	G=100.0
	print("R$",G)
elif(H>400):
	G=500.0
	print("R$",G)	
-- EXECUTION TIME:
0.190358
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
R$ 500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
R$ 100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
R$ 100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
